fix later: overflow text

--- a/06 To do List/style.css
+++ b/06 To do List/style.css
@@ -75,8 +75,9 @@ main {
     justify-content: center;
     flex-direction: column;
     margin-top: 100px;
-
-    background-color: rgb(138, 102, 180);
+    padding: 15px;
+    background-color: rgb(101, 69, 138);
+    border-radius: 10px;
 }
 
 .container-list {
@@ -91,7 +92,7 @@ main {
 }
 
 .new_div {
-    background-color: rgb(197, 176, 205);
+    background-color: rgb(62, 43, 92);
     display: flex;
     align-items: center;
     justify-content: space-between;
